--- a/AppGramota/AppGramota.csproj
+++ b/AppGramota/AppGramota.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>ShopFrame.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\EnterName.cs" />
+    <Compile Include="Models\LoaderTextDialogue.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="SaveChanges\AppBoxs.cs" />
     <Compile Include="SaveChanges\AppHuman.cs" />
@@ -151,6 +152,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\dialogues\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
